# qompass-hold

./: .gitignore  .zenodo.json  CITATION.cff  Cargo.toml  Makefile  README.md  citation.bib  renovate.json  renovate.json5  rust-toolchain
.cargo/: config.toml
apparmor.d/: local-qompass-secret
releases/: .rustc_info.json
releases/release/.fingerprint/async-trait-eed1b5c7efaebcc3/: lib-async_trait  lib-async_trait.json
releases/release/.fingerprint/autocfg-9ad3255a35371ef3/: lib-autocfg  lib-autocfg.json
releases/release/.fingerprint/bindgen-2b8c12649dd6bc00/: build-script-build-script-build  build-script-build-script-build.json
releases/release/.fingerprint/bindgen-b1fd667649592289/: run-build-script-build-script-build  run-build-script-build-script-build.json
releases/release/.fingerprint/bindgen-e2f13de1bad699f7/: dep-lib-bindgen  lib-bindgen  lib-bindgen.json
releases/release/.fingerprint/bitflags-b98f67aa527d2672/: lib-bitflags  lib-bitflags.json
releases/release/.fingerprint/build-deps-f0ca540b6f0199fb/: lib-build_deps  lib-build_deps.json
releases/release/.fingerprint/cc-967bd22f643021f6/: lib-cc  lib-cc.json
releases/release/.fingerprint/cexpr-61df1c6a71da46ee/: lib-cexpr  lib-cexpr.json
releases/release/.fingerprint/cfg-if-e9d96aa40cd382d3/: lib-cfg_if  lib-cfg_if.json
scripts/: apparmord.sh  build-safe.sh  xbuild.sh
src/: error.rs  pass.rs
src/dbus_server/: collection.rs  service.rs  session.rs
systemd/: org.freedesktop.secrets.service  qpass-secret.service
systemd/user/: qpass-secret.service
(+313 files in other folders)
